--- a/release-notes-generator.prompt.yml
+++ b/release-notes-generator.prompt.yml
@@ -147,4 +147,6 @@ messages:
 
 
       Output the release notes immediately and directly.
+  - role: user
+    content: '{{diff}}'
 model: openai/gpt-5-nano
