Implement command line interface for calculator with evaluation, conversion, divisor finding, and square root functionalities
- Added `handleCommandLine` function to process CLI arguments for evaluating expressions, converting numeral systems, finding divisors, and calculating square roots.
- Created `cli_actions.cpp` and `cli_actions.hpp` to encapsulate command line functionalities.
- Developed interactive menu handlers in `menu_handlers.cpp` and `menu_handlers.hpp` for arithmetic operations, conversions, divisors, equations, and square roots.
- Implemented divisor calculation logic in `divisors_lib.cpp` and defined the interface in `divisors.hpp`.
- Added equation solving capabilities for linear and quadratic equations in `equations.cpp` and `equations.hpp`.
- Enhanced expression evaluation with support for various mathematical functions in `expression.cpp` and `expression.hpp`.
- Introduced input handling utilities in `input.cpp` and `input.hpp` for reading user input and managing prompts.
- Created utility functions for numeral conversion in `numeral_conversion.cpp` and `numeral_conversion.hpp`.
- Added math utility functions for approximate zero checks in `math_utils.cpp` and `math_utils.hpp`.
- Developed a standalone divisors tool in `divisors.cpp` for command line usage.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,36 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Build the executables from the sources in this directory
-set(DIVISOR_SOURCES
-    divisors.cpp
-    divisors_lib.cpp
+set(CORE_SOURCES
+    core/divisors_lib.cpp
+    core/equations.cpp
+    core/expression.cpp
+    core/input.cpp
+    core/math_utils.cpp
+    core/numeral_conversion.cpp
 )
 
-add_executable(divisors ${DIVISOR_SOURCES})
-add_executable(calculator main.cpp divisors_lib.cpp)
+set(APP_SOURCES
+    main.cpp
+    app/cli_actions.cpp
+    app/menu_handlers.cpp
+)
 
-target_include_directories(divisors PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_include_directories(calculator PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+set(TOOLS_SOURCES
+    tools/divisors.cpp
+)
+
+add_executable(divisors ${TOOLS_SOURCES} core/divisors_lib.cpp)
+add_executable(calculator ${APP_SOURCES} ${CORE_SOURCES})
+
+set(COMMON_INCLUDES
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/core
+    ${CMAKE_CURRENT_SOURCE_DIR}/app
+    ${CMAKE_CURRENT_SOURCE_DIR}/tools
+)
+
+target_include_directories(divisors PRIVATE ${COMMON_INCLUDES})
+target_include_directories(calculator PRIVATE ${COMMON_INCLUDES})
 
 if(MSVC)
   target_compile_options(divisors PRIVATE /W4)
