Implement batch processing functionality with CLI commands
- Added cli_batch.cpp and cli_batch.hpp for batch command processing.
- Introduced BatchState structure to manage the state during batch execution.
- Implemented various batch commands including @set, @input, @include, @if, @endif, and @unset.
- Enhanced cli_commands.cpp and cli_commands.hpp to support new commands and their execution.
- Created cli_numeric.cpp and cli_numeric.hpp for numeric parsing and conversion utilities.
- Developed cli_output.cpp and cli_output.hpp for JSON output formatting and error handling.
- Updated CMakeLists.txt for test configurations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,12 @@ project(cli-calculator VERSION 0.1 LANGUAGES CXX)
 # Recommended: out-of-source builds
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-include(CTest)
+
+option(BUILD_TESTING "Enable testing" ON)
+
+if(BUILD_TESTING)
+  include(CTest)
+endif()
 
 # Enable good warnings for GCC/Clang
 if(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Clang)")
@@ -13,10 +18,9 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "(GNU|Clang)")
 endif()
 
 add_subdirectory(src)
-add_subdirectory(tests)
-option(BUILD_TESTING "Enable testing" ON)
 
 if(BUILD_TESTING)
+  add_subdirectory(tests)
   enable_testing()
 
   add_test(
@@ -58,3 +62,4 @@ endif()
 
 install(TARGETS divisors calculator
         RUNTIME DESTINATION bin)
+
