--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,10 @@ set(CORE_SOURCES
 set(APP_SOURCES
     main.cpp
     app/cli_actions.cpp
+    app/cli_batch.cpp
+    app/cli_commands.cpp
+    app/cli_numeric.cpp
+    app/cli_output.cpp
     app/menu_handlers.cpp
 )
 
