--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,7 +1,7 @@
 name: cli-calculator
 title: CLI Calculator
 base: core22
-version: '1.3.2'
+version: '1.3.3'
 license: Apache-2.0
 source-code:
   - https://github.com/Benedek553/cli-calculator
@@ -33,6 +33,16 @@ description: |
     * Linear equations: `a * x + b = 0`
     * Quadratic equations: `a * x^2 + b * x + c = 0`
     * Real, double, and complex root handling
+  * **Matrix Operations**
+
+    * Addition, subtraction, multiplication
+    * Determinant and inverse calculation
+    * Supports matrices of arbitrary size
+
+  * **Prime Factorization**
+
+    * Efficiently computes prime factors of integers
+    * Handles large numbers with optimized algorithms
 
   * **Utility Tools**
 
@@ -64,6 +74,14 @@ parts:
   cli-calculator:
     plugin: cmake
     source: .
+    cmake-parameters:
+      - -DBUILD_TESTING=OFF
+    override-pull: |
+      craftctl default
+      # Remove host-generated CMake artifacts that break in-snap builds
+      find . -name CMakeCache.txt -delete
+      find . -name CMakeFiles -type d -prune -exec rm -rf {} +
+      rm -rf build
     build-packages:
       - build-essential
       - cmake
