Improve CLI flag handling and add utility commands

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,12 +35,15 @@ set(COMMON_INCLUDES
 
 add_library(calculator_core ${CORE_SOURCES})
 target_include_directories(calculator_core PUBLIC ${COMMON_INCLUDES})
+target_compile_definitions(calculator_core PUBLIC CLI_CALCULATOR_VERSION="${PROJECT_VERSION}")
 
 add_executable(divisors ${TOOLS_SOURCES})
 add_executable(calculator ${APP_SOURCES})
 
 target_link_libraries(divisors PRIVATE calculator_core)
 target_link_libraries(calculator PRIVATE calculator_core)
+target_compile_definitions(divisors PRIVATE CLI_CALCULATOR_VERSION="${PROJECT_VERSION}")
+target_compile_definitions(calculator PRIVATE CLI_CALCULATOR_VERSION="${PROJECT_VERSION}")
 
 if(MSVC)
   target_compile_options(divisors PRIVATE /W4)
