--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
+find_package(ZLIB REQUIRED)
+
 set(CORE_SOURCES
     core/divisors_lib.cpp
     core/prime_factors.cpp
@@ -11,6 +13,7 @@ set(CORE_SOURCES
     core/numeral_conversion.cpp
     core/matrix.cpp
     core/statistics.cpp
+    core/graph_png.cpp
 )
 
 set(APP_SOURCES
@@ -38,6 +41,7 @@ set(COMMON_INCLUDES
 add_library(calculator_core ${CORE_SOURCES})
 target_include_directories(calculator_core PUBLIC ${COMMON_INCLUDES})
 target_compile_definitions(calculator_core PUBLIC CLI_CALCULATOR_VERSION="${PROJECT_VERSION}")
+target_link_libraries(calculator_core PUBLIC ZLIB::ZLIB)
 
 add_executable(divisors ${TOOLS_SOURCES})
 add_executable(calculator ${APP_SOURCES})
