--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,11 +26,15 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y cmake build-essential
+          
+      - name: Install vcpkg deps
+        if: runner.os == 'Windows'
+        run: |
+          vcpkg install zlib:x64-windows
 
       - name: Configure
         run: |
-          cmake -S . -B build \
-            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
 
       - name: Build
         run: |
