--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,28 +1,29 @@
 cmake_minimum_required(VERSION 3.20)
+
 include(FetchContent)
 
-fetchcontent_declare(
-    googletest
-    URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
 )
 
-fetchcontent_makeavailable(googletest)
+FetchContent_MakeAvailable(googletest)
 
 include(GoogleTest)
 
 add_executable(run_tests
-    test_expression.cpp
-    test_conversion.cpp
-    test_equations.cpp
-    test_errors.cpp
+  test_expression.cpp
+  test_conversion.cpp
+  test_equations.cpp
+  test_errors.cpp
 )
 
 target_link_libraries(run_tests
-    PRIVATE
-        gtest_main
-        gtest
-        calculator_core
+  PRIVATE
+    gtest_main
+    calculator_core
 )
 
-gtest_discover_tests(run_tests)
-
+gtest_discover_tests(run_tests
+  DISCOVERY_MODE PRE_TEST
+)
