--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,44 +8,25 @@ on:
 
 jobs:
   test:
-    name: Build & Test (${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        build_type: [Release]
+    name: Build and Test
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies (Linux)
-        if: runner.os == 'Linux'
+      - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y cmake build-essential
 
-      - name: Configure (Linux)
-        if: runner.os == 'Linux'
+      - name: Configure
         run: |
-          cmake -S . -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DUSE_ZLIB=OFF
-      
-      - name: Install ZLIB
-        if: runner.os == 'Windows'
-        run: vcpkg install zlib:x64-windows
-      
-      - name: Configure (Windows)
-        if: runner.os == 'Windows'
-        run: >
-          cmake -S . -B build
-          -DCMAKE_BUILD_TYPE=Release
-          -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DUSE_ZLIB=OFF
 
       - name: Build
         run: |
-          cmake --build build --config ${{ matrix.build_type }}
+          cmake --build build --config Release
 
       - name: Run tests
         run: |
