--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -1,6 +1,6 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: CMake on a single platform
+name: CMake Pipeline for Ubuntu
 
 on:
   push:
@@ -36,4 +36,21 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: cli-calculator-ubuntu
+        path: |
+          ${{github.workspace}}/build/src/calculator*
+          ${{github.workspace}}/build/src/divisors*
+        if-no-files-found: warn
+          
+
+
+
+
+
+
+
 
