--- a/.github/workflows/cmake-single-platform-win.yml
+++ b/.github/workflows/cmake-single-platform-win.yml
@@ -21,24 +21,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install vcpkg and zlib
-      env:
-        VCPKG_DISABLE_METRICS: 1
-      run: |
-        git clone https://github.com/microsoft/vcpkg.git vcpkg
-        .\vcpkg\bootstrap-vcpkg.bat
-        .\vcpkg\vcpkg.exe install zlib:x64-windows
-
-    - name: Configure CMake
-      run: cmake -B ${{github.workspace}}/build -A x64 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTING=OFF
-
-    - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel
-
-    # - name: Test
-    #   working-directory: ${{github.workspace}}/build
-    #   run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
-
-
-
-
+    - name: Setup MSYS2
+      # You may pin to the exact commit or the version.
+      # uses: msys2/setup-msys2@4f806de0a5a7294ffabaff804b38a9b435a73bda
+      uses: msys2/setup-msys2@v2
+          
