Add DLL file path to workflow artifact upload

--- a/.github/workflows/cmake-single-platform-win.yml
+++ b/.github/workflows/cmake-single-platform-win.yml
@@ -55,5 +55,12 @@ jobs:
           ${{github.workspace}}/build/src/calculator*
           ${{github.workspace}}/build/src/divisors*
           ${{github.workspace}}/build/src/*.exe
+          ${{github.workspace}}/build/src/*.dll
+
+
+
+
+          
+          
           ${{github.workspace}}/build/src/*.dll          
         if-no-files-found: warn
