--- a/.github/workflows/cmake-single-platform-win.yml
+++ b/.github/workflows/cmake-single-platform-win.yml
@@ -71,8 +71,7 @@ jobs:
           ${{github.workspace}}/build/src/libgcc_s_seh-1.dll
           ${{github.workspace}}/build/src/zlib1.dll
           ${{github.workspace}}/build/src/libstdc++-6.dll
-
-
+          ${{github.workspace}}/build/src/libwinpthread-1.dll
           
         if-no-files-found: warn
 
