--- a/.github/workflows/cmake-single-platform-win.yml
+++ b/.github/workflows/cmake-single-platform-win.yml
@@ -32,8 +32,7 @@ jobs:
           mingw-w64-x86_64-pkg-config
           mingw-w64-x86_64-zlib
           mingw-w64-x86_64-gcc-libs
-          
-
+	  mingw-w64-x86_64-boost
     - name: Configure (MSYS2 / Ninja)
       shell: msys2 {0}
       run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
@@ -72,5 +71,4 @@ jobs:
           ${{github.workspace}}/build/src/libstdc++-6.dll
           ${{github.workspace}}/build/src/libwinpthread-1.dll
         if-no-files-found: warn
-
 
