--- a/.github/workflows/cmake-single-platform-win.yml
+++ b/.github/workflows/cmake-single-platform-win.yml
@@ -32,6 +32,7 @@ jobs:
           mingw-w64-x86_64-pkg-config
           mingw-w64-x86_64-zlib
           mingw-w64-x86_64-gcc-libs
+          mingw-w64-x86_64-boost
           mingw-w64-x86_64-boost-libs	  
     - name: Configure (MSYS2 / Ninja)
       shell: msys2 {0}
