✦ The error occurs because the jq command can output multiple lines if it finds more than one draft   release to delete. This multi-line string corrupts the format of the  file, which   expects key-value pairs on a single line.
  I will fix this by converting the newline characters from the jq output into spaces, ensuring the
  list of IDs is a single line. This allows the next step to loop through the space-separated IDs
  correctly. This is Gemini's explanation of the cleanup draft releases issue. This patch applies this fix.

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -25,7 +25,7 @@ jobs:
 
           # Kiszűrés
           ids=$(jq -r --arg cutoff "$cutoff" \
-            '. | select(.created_at < $cutoff) | .id' releases.json)
+            '. | select(.created_at < $cutoff) | .id' releases.json | tr '\n' ' ')
 
           echo "ids=$ids" >> $GITHUB_OUTPUT
         env:
