add dependency installation to qodana workflow

--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y libboost-all-dev qtbase5-dev
       - name: Configure CMake
         run: |
           mkdir -p build
