--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -30,6 +30,7 @@ jobs:
         uses: JetBrains/qodana-action@v2025.2.1
         with:
           pr-mode: false
+          args: --property=qodana.cpp.compilation.database.path=${{ github.workspace }}/build/compile_commands.json
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_678069308 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
